--- a/src/lib/progress/style.css
+++ b/src/lib/progress/style.css
@@ -3,29 +3,30 @@
   border: 3px solid var(--w-clr-bg, transparent);
   border-top-color: var(--w-clr-fg);
   border-radius: 50%;
-  width: 34px;
-  height: 34px;
-  animation: spin 0.8s linear infinite;
+  animation: spin 1s linear infinite;
 }
 
 .w-loader--circular.w-soft {
   border-color: var(--w-clr-bg-soft);
-  border-top-color: var(--w-clr-text);
+  border-top-color: var(--w-clr-fg);
 }
 
-.w-loader--circular.w-outlined {
+.w-loader--circular.w-outlined,
+.w-loader--circular.w-mixed {
   box-shadow: inset 0 0 0 1px var(--w-clr-bg), 0 0 0 1px var(--w-clr-fg);
   border-bottom-color: transparent;
   border-left-color: transparent;
   border-right-color: transparent;
-  width: calc(34px - 2px);
-  height: calc(34px - 2px);
+}
+
+.w-loader--circular.w-mixed {
+  border-bottom-color: var(--w-clr-bg-soft);
 }
 
 .w-loader--linear {
   border-radius: 2px;
   width: 50%;
-  height: 4px;
+  height: 3px;
   position: relative;
 }
 
