--- a/src/lib/textarea/style.css
+++ b/src/lib/textarea/style.css
@@ -31,8 +31,8 @@
   background-color: var(--color-success-0);
 }
 
-.w-textarea.w-plain.w-danger {
-  background-color: var(--color-danger-0);
+.w-textarea.w-plain.w-error {
+  background-color: var(--color-error-0);
 }
 
 .w-textarea.w-plain.w-warning {
